<resources>
    <string name="daily_info">Daily Info</string>
    <string name="my_tests">My Tests</string>
    <string name="contacts">Contacts</string>
    <string name="vaccine_info">Vaccine Info</string>
    <string name="exit">Exit</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="register">Register</string>
    <string name="register_test">Register Test</string>
    <string name="covid_19_info">COVID-19 Info</string>
    <string name="covid_19">COVID-19</string>
    <string name="info">Info</string>
    <string name="result">Result</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="click_the_button_to_register_your_tests">Click the button + to register your tests</string>
    <string name="covid_19_telephone_contacts">COVID-19 telephone contacts</string>
    <string name="phone_sns24">+351 808 24 24 24</string>
    <string name="contacts2">Line SNS 24 for screening symptoms and clarifying doubts about COVID-19.</string>
    <string name="phone_social_security">+351 300 502 502</string>
    <string name="contacts3">Social Security Line for clarifications on family assistance, sickness benefits and quarantine.</string>
    <string name="phone_consular">+351 217929714</string>
    <string name="phone_consular2">+351 961706472</string>
    <string name="contacts4">Consular Emergency Office</string>
    <string name="covid_19_digital_contacts">COVID-19 Digital Contacts</string>
    <string name="contacts5">covid19.min-saude.pt\nDGS platform for clarifications on COVID-19.\n\natendimento@SNS24.gov.pt\nSNS 24 channel for clarification of doubts. Do not use for medical diagnosis.\n\ngec@mne.pt\nConsular Emergency Office\n\nCOVID19 Legislation\nConsular Emergency Office COVID19 Legislation Electronic Journal area dedicated to pandemic legislation</string>
    <string name="danger">Danger</string>
    <string name="daily_info_portugal">Daily Info (Portugal)</string>
    <string name="publication_date">08/04/2021</string>
    <string name="covid_19_cases">COVID-19 Cases</string>
    <string name="new_confirmed_cases">New Cases: </string>
    <string name="active_cases">Active Cases: </string>
    <string name="total_confirmed_cases">Total Confirmed Cases: </string>
    <string name="total_recovered_cases">Total Recovered Cases: </string>
    <string name="hospitalized">Hospitalized: </string>
    <string name="hospitalized2">Hospitalized</string>
    <string name="uci_hospitalized">UCI Hospitalized: </string>
    <string name="total_number_of_deaths">Total Number of Deaths: </string>
    <string name="rt">RT: </string>
    <string name="vaccine_info2">Vaccine Info (Portugal)</string>
    <string name="publication_date2">08/04/2021</string>
    <string name="total_vaccine_doses">Total Vaccine Doses: </string>
    <string name="daily_vaccine_doses">Daily Vaccine Doses: </string>
    <string name="percentage_of_vaccine_doses">Percentage Of Vaccine Doses: </string>
    <string name="first_vaccine_doses">First Vaccine Doses</string>
    <string name="second_vaccine_doses">Second Vaccine Doses</string>
    <string name="test_data">Test Data</string>
    <string name="ascending_sorting">Ascending Sorting By Test Registration Date</string>
    <string name="descending_sorting">Descending Sorting By Test Registration Date</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply Filter</string>
    <string name="covid_test_registered">Registered Covid Test</string>
    <string name="test_details">Test Details</string>
    <string name="moderate">Moderate</string>
    <string name="setting_switch_themes">Disable automatic dark mode</string>
    <string name="setting_switch_themes_summary">Switch themes according to battery life</string>
    <string name="counties">Counties</string>
    <string name="settings">Settings</string>
    <string name="mandatory_fields">Mandatory field</string>
    <string name="test_registered">Test registered</string>
    <string name="close">Close</string>
    <string name="incidence">Incidence</string>
    <string name="degree_of_incidence">Degree of Incidence</string>
    <string name="district_output">District:</string>
    <string name="incidence_output">Incidence:</string>
    <string name="degree_of_incidence_output">Degree of Incidence:</string>
    <string name="last_update_output">Last Update:</string>
    <string name="population_output">Population:</string>
    <string name="cases_output">Cases Last 14 Days:</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="extremely_high">Extremely High</string>
    <string name="search_counties">Search Counties</string>
    <string name="no_connection">No internet connection, data can be outdated</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="ascending_order">Ascending Order</string>
    <string name="descending_order">Descending Order</string>
    <string name="no_photo">No Photo</string>
    <string name="invalid_date_format">Invalid Date Format</string>
    <string name="out">Out of Portugal</string>
    <string name="denied">Location Denied</string>
</resources>