<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            style="@style/HighlightTextStyle"
            android:textColor="?attr/onBackgroundColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/my_tests" />

        <ImageButton
            android:id="@+id/button_covid_tests_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/ic_covid_test_filter" />

    </FrameLayout>

    <TextView
        android:id="@+id/empty_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:text="@string/click_the_button_to_register_your_tests"
        style="@style/TextStyle"
        android:textColor="?attr/onBackgroundColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/covid_tests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:paddingBottom="10dp"
        android:background="?attr/backgroundColor"/>

    <LinearLayout
        android:id="@+id/covid_tests_filter_fragment"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/filters"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/result"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="16dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_result"
                android:layout_alignParentStart="true"
                android:padding="4dp"
                android:text="@string/positive" />


            <CheckBox
                android:id="@+id/checkbox_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_result"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                android:text="@string/negative" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="16dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_ascending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_date"
                android:layout_alignParentStart="true"
                android:padding="4dp"
                android:text="@string/ascending_order" />

            <CheckBox
                android:id="@+id/checkbox_descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_date"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                android:text="@string/descending_order" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/button_close2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/dark_red"
                android:text="@string/close"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_ok2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/button_close2"
                android:layout_marginEnd="-111dp"
                android:text="Ok" />

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="?attr/fabColor"
        android:src="@drawable/ic_add"/>

</RelativeLayout>
