<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor">

        <TextView
            android:id="@+id/form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="start"
            android:text="@string/register_test"
            style="@style/HighlightTextStyle"
            android:textColor="?attr/onBackgroundColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                style="@style/TextStyle"
                android:textColor="?attr/onBackgroundColor" />

            <EditText
                android:id="@+id/input_result"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Positivo / Negativo"
                android:textColorHint="@color/transparent"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                style="@style/TextStyle"
                android:textColor="?attr/onBackgroundColor" />

            <EditText
                android:id="@+id/input_location"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ex: Lisboa"
                android:textColorHint="@color/transparent"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    style="@style/TextStyle"
                    android:textColor="?attr/onBackgroundColor" />

                <EditText
                    android:id="@+id/input_date"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="Ex: 10-04-2021"
                    android:textColorHint="@color/transparent"
                    tools:ignore="TextFields" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/button_photo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_add_photo"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_submit_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="5dp"
            android:text="@string/register"
            android:textColor="?attr/onCardColor"
            style="@style/SquareButtonStyle2"/>

    </LinearLayout>
</ScrollView>
